tests/NormalTests/paczka1/fuzzy1/97931936.err
Error in line 6: S367 S367 66,2
Error in line 13: S367 A125 17,5
Error in line 5: MY4eIbB S930 26,0
Error in line 27: MY4eIbB S367 82,0
Error in line 38: Nmz0Q3Qo53 A125 40,27
